Sorgente/.apex/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Area_di_interesse__c</fullName>
        <inlineHelpText>Selezione le aree per le quali lo specialista desidera ricevere maggiori informazioni</inlineHelpText>
        <label>Aree di interesse</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Valutazione_incontro__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Staminali cordone ombelicale</fullName>
                </value>
                <value>
                    <fullName>Prenatale</fullName>
                </value>
                <value>
                    <fullName>Oncologia molecolare predittiva</fullName>
                </value>
                <value>
                    <fullName>Preconcepimento</fullName>
                </value>
                <value>
                    <fullName>Generico ginecologico</fullName>
                </value>
                <value>
                    <fullName>Progetti siti web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_note__c</fullName>
        <label>Area note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Concordato_da__c</fullName>
        <label>Concordato da</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Autonomamente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_completamento__c</fullName>
        <label>Data completamento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dettagli_ASC__c</fullName>
        <label>Dettagli ASC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_titolare_Opportunit__c</fullName>
        <label>ID titolare Opportunità</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Modalit_riconoscimento__c</fullName>
        <label>Modalità riconoscimento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fattura</fullName>
                </value>
                <value>
                    <fullName>Buoni</fullName>
                </value>
                <value>
                    <fullName>Congressi\Convegni</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivazione_non_interesse__c</fullName>
        <label>Motivazione non interesse</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Valutazione_incontro__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Prezzo prodotto</fullName>
                </value>
                <value>
                    <fullName>Collabora con competitor</fullName>
                </value>
                <value>
                    <fullName>Qualità prodotto</fullName>
                </value>
                <value>
                    <fullName>Qualità servizio</fullName>
                </value>
                <value>
                    <fullName>Listino incompleto</fullName>
                </value>
                <value>
                    <fullName>Non crede nostro approccio</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunit_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup on TAsk towards Opp 
test</description>
        <label>Opportunità_Task</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Attività</relationshipLabel>
        <relationshipName>Attivit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email__c</fullName>
        <label>Opportunity Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ritardo__c</fullName>
        <formula>Data_completamento__c - ActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ritardo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valutazione_incontro__c</fullName>
        <label>Valutazione incontro</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interessato</fullName>
                </value>
                <value>
                    <fullName>Non interessato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>crms22__Summary_Comments__c</fullName>
        <description>Summary Comments to display a summary of Comments (on related lists)</description>
        <inlineHelpText>Summary Comments to display a summary of Comments (on related lists)</inlineHelpText>
        <label>Summary Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Attivit_della_settimana</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Le mie attività della settimana</label>
    </listViews>
    <listViews>
        <fullName>Gestione_prevendita</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>EVENT.END_DATE_TIME</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>ACTIVITY_SUBTYPE</field>
            <operation>equals</operation>
            <value>Task</value>
        </filters>
        <filters>
            <field>ACTIVITY_SUBTYPE</field>
            <operation>equals</operation>
            <value>Event</value>
        </filters>
        <label>Gestione prevendita scaduti</label>
        <sharedTo>
            <role>Responsabile_Prevendita</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Gestione_prevendita_odierne</fullName>
        <booleanFilter>(1 OR 2) AND 4 AND 3 AND 5</booleanFilter>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY_SUBTYPE</field>
            <operation>equals</operation>
            <value>Task</value>
        </filters>
        <filters>
            <field>ACTIVITY_SUBTYPE</field>
            <operation>equals</operation>
            <value>Event</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Annullato</value>
        </filters>
        <label>Gestione prevendita odierne</label>
        <sharedTo>
            <role>Responsabile_Prevendita</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Gestioni_preparto_ieri_ed_oggi</fullName>
        <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY_SUBTYPE</field>
            <operation>equals</operation>
            <value>Event</value>
        </filters>
        <filters>
            <field>ACTIVITY_SUBTYPE</field>
            <operation>equals</operation>
            <value>Task</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Annullato</value>
        </filters>
        <label>Attività postvendita oggi</label>
        <sharedTo>
            <role>Responsabile_Postvendita</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>